--- a/package.json
+++ b/package.json
@@ -1,32 +1,49 @@
 {
-	"name": "my-linkedin-profile-clone",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc -b && vite build",
-		"lint": "eslint .",
-		"preview": "bun run build && wrangler pages dev",
-		"deploy": "bun run build && wrangler pages deploy",
-		"cf-typegen": "wrangler types"
-	},
-	"dependencies": {
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.33.0",
-		"@types/react": "^19.1.10",
-		"@types/react-dom": "^19.1.7",
-		"@vitejs/plugin-react-swc": "^4.0.0",
-		"eslint": "^9.33.0",
-		"eslint-plugin-react-hooks": "^5.2.0",
-		"eslint-plugin-react-refresh": "^0.4.20",
-		"globals": "^16.3.0",
-		"typescript": "~5.8.3",
-		"typescript-eslint": "^8.39.1",
-		"vite": "^7.1.2",
-		"wrangler": "^4.40.2"
-	}
+  "name": "my-linkedin-profile-clone",
+  "private": true,
+  "version": "0.0.1",
+  "author": "xdemocle",
+  "license": "MIT",
+  "homepage": "https://github.com/xdemocle/my-linkedin-profile-clone",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xdemocle/my-linkedin-profile-clone.git"
+  },
+  "main": "index.js",
+  "type": "module",
+  "engines": {
+    "node": ">=22.19.0"
+  },
+  "packageManager": "bun@1.2.15",
+  "bun": {
+    "env": {
+      "NODE_ENV": "development"
+    }
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "bun run build && wrangler pages dev",
+    "deploy": "bun run build && wrangler pages deploy",
+    "cf-typegen": "wrangler types"
+  },
+  "dependencies": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.36.0",
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react-swc": "^4.1.0",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.22",
+    "globals": "^16.4.0",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.44.1",
+    "vite": "^7.1.2",
+    "wrangler": "^4.40.2"
+  }
 }
