--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.44.1",
     "vite": "^7.1.2",
+    "vite-prerender-plugin": "^0.5.12",
     "wrangler": "^4.40.2"
   }
 }
