--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,8 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-],
-"compilerOptions": {
-    "types": [
-        "./worker-configuration.d.ts"
-    ]
-}
+  ],
+  "compilerOptions": {
+    "types": ["./worker-configuration.d.ts"]
+  }
 }
