--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,7 +6,7 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "my-linkedin-profile-clone",
   "compatibility_date": "2025-09-27",
-  "pages_build_output_dir": "./dist",
+  "pages_build_output_dir": "./dist/client",
   "observability": {
     "enabled": true
   }
