Update build scripts and improve rendering in Vite configuration
- Modified the preview script in package.json to run the build command before starting the development server.
- Removed the HMR overlay configuration in vite.config.ts for a cleaner setup.
- Changed the rendering method in src/main.tsx from renderToString to renderToStaticMarkup for optimized prerendering.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "wrangler pages dev",
+    "preview": "bun run build && wrangler pages dev",
     "deploy": "bun run build && wrangler pages deploy",
     "cf-typegen": "wrangler types"
   },
