Update build command and adjust compatibility date in configuration files
- Changed the build script in package.json to use bunx for building with Vite.
- Updated the compatibility date in wrangler.jsonc to reflect a new target date.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "bunx vite build",
     "lint": "eslint .",
     "preview": "bun run build && wrangler pages dev",
     "deploy": "bun run build && wrangler pages deploy",
