--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "http-server": "^14.1.1",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.44.1",
     "vite": "^7.1.2",
