--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-linkedin-profile-clone",
-  "private": true,
+  "description": "This is a LinkedIn profile clone built with React, TypeScript, and Vite. The project is configured for deployment on Cloudflare Pages and uses Bun as the package manager.",
   "version": "0.0.1",
   "author": "xdemocle",
   "license": "MIT",
