--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/bun": "^1.2.23",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.15",
@@ -46,6 +47,7 @@
     "http-server": "^14.1.1",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.44.1",
     "vite": "^7.1.2",
