--- a/package.json
+++ b/package.json
@@ -28,29 +28,27 @@
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
-  },
-  "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/bun": "^1.2.23",
     "@types/node": "^24.5.2",
-    "@types/react": "^19.1.15",
     "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.1.15",
     "@vitejs/plugin-react-swc": "^4.1.0",
-    "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint": "^9.36.0",
     "globals": "^16.4.0",
     "http-server": "^14.1.1",
-    "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
+    "postcss": "^8.5.6",
+    "react-dom": "^19.1.1",
+    "react": "^19.1.1",
     "tailwindcss": "^4.1.13",
-    "typescript": "~5.9.2",
     "typescript-eslint": "^8.44.1",
-    "vite": "^7.1.2",
+    "typescript": "~5.9.2",
     "vite-prerender-plugin": "^0.5.12",
+    "vite": "^7.1.7",
     "wrangler": "^4.40.2"
   }
 }
