--- a/package.json
+++ b/package.json
@@ -29,26 +29,32 @@
   },
   "dependencies": {
     "@eslint/js": "^9.36.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
     "@types/bun": "^1.2.23",
     "@types/node": "^24.5.2",
-    "@types/react-dom": "^19.1.9",
     "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
-    "eslint": "^9.36.0",
     "globals": "^16.4.0",
     "http-server": "^14.1.1",
-    "postcss-cli": "^11.0.1",
+    "lucide-react": "^0.544.0",
     "postcss": "^8.5.6",
-    "react-dom": "^19.1.1",
+    "postcss-cli": "^11.0.1",
     "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
-    "typescript-eslint": "^8.44.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.2",
-    "vite-prerender-plugin": "^0.5.12",
+    "typescript-eslint": "^8.44.1",
     "vite": "^7.1.7",
+    "vite-prerender-plugin": "^0.5.12",
     "wrangler": "^4.40.2"
   }
 }
