chore: remove unused logo assets and references from App component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,6 @@
   "files": [],
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
-    "types": ["./worker-configuration.d.ts"],
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"],
-      "~*": ["./src/*"]
-    }
+    "types": ["./worker-configuration.d.ts"]
   }
 }
