chore: standardize import paths to use @/* alias and remove redundant ~* alias

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,13 +21,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "types": ["node"],
-    "typeRoots": ["./node_modules/@types"],
-
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"],
-      "~*": ["./src/*"]
-    }
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["vite.config.ts"]
 }
