--- a/package.json
+++ b/package.json
@@ -29,7 +29,22 @@
   },
   "dependencies": {
     "@eslint/js": "^9.36.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.13",
     "@types/bun": "^1.2.23",
     "@types/node": "^24.5.2",
@@ -38,6 +53,7 @@
     "@vitejs/plugin-react-swc": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
@@ -48,6 +64,7 @@
     "postcss-cli": "^11.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.63.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
@@ -55,6 +72,7 @@
     "typescript-eslint": "^8.44.1",
     "vite": "^7.1.7",
     "vite-prerender-plugin": "^0.5.12",
-    "wrangler": "^4.40.2"
+    "wrangler": "^4.40.2",
+    "zod": "^4.1.11"
   }
 }
