--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.44.1",
+    "use-intl": "^4.3.9",
     "vite": "^7.1.7",
     "vite-prerender-plugin": "^0.5.12",
     "wrangler": "^4.40.2",
