--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "use-intl": "^4.3.9",
     "vite": "^7.1.7",
     "vite-prerender-plugin": "^0.5.12",
+    "wouter": "^3.7.1",
     "wrangler": "^4.40.2",
     "zod": "^4.1.11"
   }
