--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
     "useDefineForClassFields": true,
-    "types": ["node"],
+    "types": ["node", "@mdx-js/react"],
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
@@ -29,5 +29,5 @@
       "~*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "src/**/*.mdx"]
 }
