--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,8 +25,7 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "~*": ["./src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src", "src/**/*.mdx"]
