--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,9 @@
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
     "types": ["./worker-configuration.d.ts"],
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "~*": ["./src/*"]
+      "@/*": ["./src/*"]
     }
   }
 }
