--- a/package.json
+++ b/package.json
@@ -82,5 +82,8 @@
     "wouter": "^3.7.1",
     "wrangler": "^4.40.2",
     "zod": "^4.1.11"
+  },
+  "devDependencies": {
+    "vite-plugin-static-copy": "^3.1.2"
   }
 }
