chore: update routing config with regex patterns and exclude static assets

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "my-linkedin-profile-clone"
 compatibility_date = "2025-09-15"
 main = "./functions/_worker.js"
+pages_build_output_dir = "./dist/client"
 
 [site]
 bucket = "./dist/client"
