chore: update build script to use frozen lockfile and disable language redirects

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:cf": "bun install && vite build",
+    "build:cf": "bun install --frozen-lockfile && vite build",
     "lint": "eslint .",
     "preview": "bun run build && wrangler pages dev",
     "deploy": "bun run build && wrangler pages deploy",
