--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "lint": "eslint .",
     "preview": "bun run build && wrangler pages dev",
     "deploy": "bun run build && wrangler pages deploy",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@eslint/js": "^9.36.0",
@@ -83,5 +87,13 @@
     "wouter": "^3.7.1",
     "wrangler": "^4.40.3",
     "zod": "^4.1.11"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitest/ui": "^3.2.4",
+    "jsdom": "^27.0.0",
+    "vitest": "^3.2.4"
   }
 }
