chore: add beautiful-react-hooks dependency to package.json

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "beautiful-react-hooks": "^5.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
