--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "fuse.js": "^7.1.0",
     "globals": "^16.4.0",
     "http-server": "^14.1.1",
     "lucide-react": "^0.544.0",
