refactor: implement deep merge strategy for JSON Resume localization
Add deepMerge function to useJSONResumeAdapter to merge locale-specific resume data with English base data, ensuring all fields are populated even when translations are incomplete. Add check:resume-sync npm script for validating resume data consistency across locales.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build:cf": "bun install --frozen-lockfile && vite build",
     "lint": "eslint .",
     "prettier": "prettier --write .",
+    "check:resume-sync": "node scripts/check-resume-sync.ts",
     "preview": "bun run build && wrangler pages dev",
     "deploy": "bun run build && wrangler pages deploy",
     "cf-typegen": "wrangler types",
