feat: add sync:resume-locales script for automated locale synchronization
Add npm script to run sync-resume-locales-from-en.ts for automating the synchronization of resume data from English base to other locale files.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint": "eslint .",
     "prettier": "prettier --write .",
     "check:resume-sync": "node scripts/check-resume-sync.ts",
+    "sync:resume-locales": "node scripts/sync-resume-locales-from-en.ts",
     "preview": "bun run build && wrangler pages dev",
     "deploy": "bun run build && wrangler pages deploy",
     "cf-typegen": "wrangler types",
