refactor: add JSON-specific Prettier config and document useProfileData deprecation
Add Prettier overrides for JSON files with stricter formatting rules (no trailing commas, 200 char width, compact spacing). Create DEPRECATED_useProfileData.md documenting migration from useProfileData to useJSONResumeAdapter with rationale and affected files list. Clean up plan.md by removing completed phone number task. Compact tsconfig.json references array formatting.

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,18 @@
   "trailingComma": "es5",
   "semi": true,
   "arrowParens": "avoid",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "overrides": [
+    {
+      "files": ["*.json", "*.json5"],
+      "options": {
+        "trailingComma": "none",
+        "tabWidth": 2,
+        "printWidth": 200,
+        "bracketSpacing": false,
+        "arrowParens": "always",
+        "endOfLine": "lf"
+      }
+    }
+  ]
 }
