refactor: add layout width toggle and sticky sidebar with LinkedIn XL extension button
Add isLayoutLarge state to AppContext for toggling between fixed-width and full-width layouts. Update Navbar and PageLayout to conditionally apply max-w-7xl based on layout state. Add LinkedIn XL browser extension button with avatar icon in Navbar. Make sidebar sticky with scroll overflow on large screens. Set Prettier printWidth to 80. Replace LinkedIn logo image with optimized version. Change Separator width

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "tabWidth": 2,
   "useTabs": false,
   "trailingComma": "es5",
+  "printWidth": 80,
   "semi": true,
   "arrowParens": "avoid",
   "endOfLine": "auto",
